Changes to code

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -46,7 +46,7 @@
   <div id="notification-container"></div>
   <form id="post-container">
     <input type="text" id="notification-input">
-    <button type="submit" id="post-button">Send</button>
+    <button type="submit" id="post-button">Post</button>
   </form>
 </body>
 </html>
