Adding code for rooms

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Chat App</title>
+  <title>Horoscope App</title>
   <script>
     const roomName = "<%= roomName %>"
   </script>
@@ -46,7 +46,7 @@
   <div id="notification-container"></div>
   <form id="post-container">
     <input type="text" id="notification-input">
-    <button type="submit" id="post-button">Send</button>
+    <button type="submit" id="post-button">Post</button>
   </form>
 </body>
 </html>
