--- a/views/room.ejs
+++ b/views/room.ejs
@@ -9,7 +9,7 @@
     const roomName = "<%= roomName %>"
   </script>
   <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
-  <script defer src="main_script.js"></script>
+  <script defer src="socket_script.js"></script>
   <style>
     body {
       padding: 0;
