Fix database reference

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
 <body>
   <canvas id="canvas" width="500" height="500" style="background-color:white">
   </canvas>
+  <div id="horoscope-fortune-container"></div>
   <div id="room-container">
     <% Object.keys(rooms).forEach(room=> { %>
       <div>
