Add todos and some functionalities

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
   <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
   <script defer type="module" src="socket_script.js"></script>
   <script type="module" src="horosope_chart.js"></script>
+  <script type="module" src="events.js"></script>
 </head>
 
 <body>
