--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,10 @@
       <% }) %>
     </section>
 </section>
-  <section id="horoscope-fortune-container">
+<section class="horoscope-container hidden" id="horoscope-zodiac-container">
+  <img src="images/scorpio.png">
+</section>
+  <section  class="horoscope-container hidden" id="horoscope-fortune-container">
   </section>
 </body>
 
