--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,51 +12,57 @@
   <script type="module" src="horosope_chart.js"></script>
   <script type="module" src="events.js"></script>
 </head>
- 
+
 <body>
-  <h1>Horoscope App</h1>
+  <img src="images/logo.png" width="300">
   <section id="horoscope-wrapper">
-  <canvas id="canvas" width="600" height="600" style="background-color:white">
-  </canvas>
-  <form action="/events" method="GET" class="birthday">
-    <label for="birthday">Enter your birthday:</label>
-    <input id="birthday" name="birthday" type="date" required>
-    <input id="time" name="time" type="time" required>
-    <button id="submit_btn" type="submit">Submit</button>
-  </form>
-  <form class="birthday">
-    <label for="date-time">Enter Date/Time:</label>
-    <input type="datetime-local" id="date-time" name="date-time">
-    
-    <label for="latitude">Enter Latitude:</label>
-    <input type="number" step="any" id="latitude" name="latitude">
-    
-    <label for="longitude">Enter Longitude:</label>
-    <input type="number" step="any" id="longitude" name="longitude">
-    
-    <button type="submit">Submit</button>
-  </form>
-  <!--
-  <div class="style-wrapper">
-    <form action="/room" method="POST" class="room">
-      <input name="room" type="text" required>
-      <button type="submit">New Room</button>
+    <form action="/events" method="GET" class="formElement" id="planetarPositioningForm">
+      <label for="birthday">Enter your birthday:</label>
+      <input id="birthday" name="birthday" type="date" required>
+
+      <input id="time" name="time" type="time" required>
+
+      <h3>If you want to see your Ascendant, please enter: </h3>
+
+      <label for="latitude">Enter Latitude:</label>
+      <input type="number" step="any" id="latitude" name="latitude">
+  
+      <label for="longitude">Enter Longitude:</label>
+      <input type="number" step="any" id="longitude" name="longitude">
+
+      <button id="submit_btn" type="submit">Submit</button>
     </form>
-    <section id="room-container">
+
+    <canvas class="hidden" id="canvas" width="600" height="600" style="background-color:white">
+    </canvas>
+    <img src="images/astrology.png" id="horoscope-img">
+
+    <div class="result">
+      <div class="horoscope-container hidden" id="horoscope-zodiac-container">
+        <img src="images/scorpio.png">
+      </div>
+
+      <div class="horoscope-container hidden" id="horoscope-fortune-container">
+      </div>
+    </div>
+
+  </section>
+
+
+  <section class="rooms">
+    <h3>Available rooms:</h3>
+    <div id="room-container">
       <% Object.keys(rooms).forEach(room=> { %>
         <div>
           <%= room %>
         </div>
         <a href="/<%= room %>">Join</a>
         <% }) %>
-      </section>
-      -->
-  </div>
-</section>
-<section class="horoscope-container hidden" id="horoscope-zodiac-container">
-  <img src="images/scorpio.png">
-</section>
-  <section  class="horoscope-container hidden" id="horoscope-fortune-container">
+    </div>
+    <form action="/room" method="POST">
+      <input name="room" type="text" required>
+      <button type="submit">New Room</button>
+    </form>
   </section>
 </body>
 
