--- a/views/room.ejs
+++ b/views/room.ejs
@@ -4,19 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="css/room.css" />
-  <title>Horoscope App</title>
+  <title>Chat App</title>
   <script>
     const roomName = "<%= roomName %>"
   </script>
   <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
   <script defer src="socket_script.js"></script>
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+    }
+    #message-container {
+      width: 80%;
+      max-width: 1200px;
+    }
+    #message-container div {
+      background-color: #CCC;
+      padding: 5px;
+    }
+    #message-container div:nth-child(2n) {
+      background-color: #FFF;
+    }
+    #send-container {
+      position: fixed;
+      padding-bottom: 30px;
+      bottom: 0;
+      background-color: white;
+      max-width: 1200px;
+      width: 80%;
+      display: flex;
+    }
+    #message-input {
+      flex-grow: 1;
+    }
+  </style>
 </head>
 <body>
-  <div id="notification-container"></div>
-  <form id="post-container">
-    <input type="text" id="notification-input">
-    <button type="submit" id="post-button">Post</button>
+  <div id="message-container"></div>
+  <form id="send-container">
+    <input type="text" id="message-input">
+    <button type="submit" id="send-button">Send</button>
   </form>
 </body>
 </html>
