Dispaly the ascendant

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 
       <input id="time" name="time" type="time" required>
 
-      <h3>If you want to see your Ascendant, please enter: </h3>
+      <h3>If you want to see your Ascendant, you should enter the latitude and longitude of your birthplace: </h3>
 
       <label for="latitude">Enter Latitude:</label>
       <input type="number" step="any" id="latitude" name="latitude">
