--- a/views/room.ejs
+++ b/views/room.ejs
@@ -10,6 +10,7 @@
   </script>
   <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
   <script defer src="socket_script.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
   <style>
     body {
       padding: 0;
@@ -46,7 +47,8 @@
   <div id="message-container"></div>
   <form id="send-container">
     <input type="text" id="message-input">
-    <button type="submit" id="send-button">Send</button>
+    <button type="submit" id="send-button">Send message</button>
+    <button type="submit" id="send-horoscope-button">Send horoscope</button>
   </form>
 </body>
 </html>
